<resources>
    <string name="app_name">Parking Management</string>
    <string name="floor_icon_description">Floor Icon</string>
    <string name="add_floor_icon_description">Add Floor Icon</string>
    <string name="floor_name_title">Name : </string>
    <string name="total_spaces_title">Total Spaces : </string>
    <string name="entry_exit">Entry/Exit</string>
    <string name="settings">Settings</string>
    <string name="transaction_history">History</string>
    <string name="settings_floor_list">Floor List</string>
    <string name="settings_parking_charges">Parking Charges</string>
    <string name="settings_discount_coupon">Discount Coupon</string>
    <string name="coupon_icon_description">Coupon Icon</string>
    <string name="coupon_code_title">Code : </string>
    <string name="coupon_start_at_title">Start At : </string>
    <string name="coupon_end_at_title">End At : </string>
    <string name="coupon_filter_unused">Unused</string>
    <string name="coupon_filter_used">Used</string>
    <string name="coupon_filter_invalidated">Invalidated</string>
    <string name="entry_exit_entry_button">Entry</string>
    <string name="entry_exit_exit_button">Exit</string>
    <string name="entry_exit_reserve_button">Reserve</string>
    <string name="entry_exit_un_reserve_button">Un Reserve</string>
    <string name="entry_exit_vacancy">View Vacancy</string>
    <string name="vehicle_entry">Vehicle Entry</string>
    <string name="vehicle_type_bike">Bike</string>
    <string name="vehicle_type_car">Car</string>
    <string name="vehicle_type_bus">Bus</string>
    <string name="vehicle_number">Vehicle Number</string>
    <string name="availability_check">Check</string>
    <string name="get_ticket">Get Ticket</string>
    <string name="entry_time">Entry Time</string>
    <string name="entry_time_example">20:25:63</string>
    <string name="exit_time">Exit Time</string>
    <string name="exit_time_example">20:25:63</string>
    <string name="vehicle_number_example">TN 14 M5616</string>
    <string name="alloted_space">Alloted Space</string>
    <string name="alloted_space_example">First Floor"</string>
    <string name="parking_number">Parking Number</string>
    <string name="parking_number_example">20211101006</string>
    <string name="house_full">HouseFull</string>
    <string name="error_try_again">Error occurred. please try again..</string>
    <string name="vehicle_reservation">Reservation</string>
    <string name="vehicle_un_reservation">Delete Reservation</string>
    <string name="reservation_date">Reservation Date</string>
    <string name="get_reservation_details">Get Details</string>
    <string name="remove_reservation">Delete</string>
    <string name="reserve_space">Reserve</string>
    <string name="transaction_history_title">Transaction History</string>
    <string name="transaction_vehicle_number">Vehicle Number : </string>
    <string name="transaction_vehicle_type">Vehicle Type : </string>
    <string name="transaction_total_amount">Total Amount : </string>
    <string name="transaction_discounted_amount">Discounted Amount : </string>
    <string name="transaction_net_amount">Net Amount : </string>
    <string name="reservation_id">Reservation ID</string>
    <string name="error_no_details">No details found..</string>
    <string name="paid_success">Paid Successfully..</string>
    <string name="vehicle_exit">Vehicle Exit</string>
    <string name="vehicle_ok">Ok</string>
    <string name="invalid_coupon">Invalid Coupon Code</string>
    <string name="valid_coupon">Valid Coupon. Please Calculate again</string>
    <string name="default_amount">₹ 0</string>
    <string name="rupee">₹</string>
    <string name="parking_settings">Parking Settings</string>
    <string name="label_bike">Bike : </string>
    <string name="label_car">Car : </string>
    <string name="label_bus">Bus : </string>
    <string name="enter_valid_details">"Please enter valid details"</string>
    <string name="configure_floors">Please configure floors and Parking charges</string>
    <string name="filter_label">Filter</string>
    <string name="floor_details_label">Floor Details</string>
    <string name="floor_name_label">Floor Name</string>
    <string name="available_spaces_label">Available Spaces</string>
    <string name="save_label">Save</string>
    <string name="generate_coupons">Generate Coupons</string>
    <string name="coupon_count">Coupon Count</string>
    <string name="validity">Validity</string>
    <string name="generate">Generate</string>
    <string name="price_calculation">Price Calculation</string>
    <string name="coupon_code">Coupon Code</string>
    <string name="check_coupon">Check Coupon</string>
    <string name="calculate">Calculate</string>
    <string name="pay">Pay</string>
    <string name="parking_charges">Parking Charges</string>
    <string name="charge_first_hour">Charge for the first hour</string>
    <string name="amount">Amount</string>
    <string name="charge_remaining_hours">Charge for the remaining hours</string>
    <string name="cancel_label">Cancel</string>
    <string name="total">Total</string>
    <string name="vacant">Vacant</string>
</resources>