<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/history_filter_dialog"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="10dp"
        android:orientation="horizontal"
        android:weightSum="3">

        <CheckBox
            android:id="@+id/coupon_filter_car"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vehicle_type_car" />

        <CheckBox
            android:id="@+id/coupon_filter_bike"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vehicle_type_bike" />

        <CheckBox
            android:id="@+id/coupon_filter_bus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/vehicle_type_bus" />
    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/filter_history_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="10dp"
        android:text="@string/filter_label"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

</LinearLayout>
