<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <import type="android.view.View" />

        <variable
            name="vehicleExitViewModel"
            type="app.com.parkingmanagement.presentation.entry_exit.EntryViewModel" />
    </data>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="30dp">

        <RelativeLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:context=".presentation.entry_exit.EntryExitActivity">

            <ProgressBar
                android:id="@+id/exit_progress_bar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:layout_gravity="center"
                android:translationZ="10dp"
                android:visibility="gone" />

            <LinearLayout
                android:id="@+id/un_reservation_detail_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingHorizontal="20dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginVertical="20dp"
                    android:gravity="center"
                    android:text="@string/vehicle_exit"
                    android:textColor="@color/black"
                    android:textSize="@dimen/card_title"
                    android:textStyle="bold" />

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/un_reservation_id_text_input_layout"
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:layout_marginBottom="5dp"
                    android:hint="@string/reservation_id"
                    android:textColorHint="@android:color/darker_gray"
                    android:theme="@style/TextInputLayoutStyle"
                    app:boxStrokeColor="@color/button_text"
                    app:endIconTint="@color/button_text"
                    app:hintTextColor="@color/button_text">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/exit_reservation_id_text_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textColor="@color/black" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.button.MaterialButton
                    android:id="@+id/get_reservation_details"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:text="@string/get_reservation_details"
                    android:textAllCaps="false"
                    android:textColor="@color/white"
                    app:backgroundTint="@color/button_text" />

                <LinearLayout
                    android:id="@+id/reserve_parking_ticket"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="20dp"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/ticket_background"
                    android:orientation="vertical"
                    android:padding="20dp"
                    android:visibility="gone">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="70dp"
                        android:orientation="horizontal"
                        android:weightSum="2">

                        <ImageView
                            android:id="@+id/vehicle_type_icon"
                            android:layout_width="100dp"
                            android:layout_height="match_parent"
                            android:layout_weight="1" />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:layout_weight="1"
                            android:gravity="center"
                            android:text="@string/app_name"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold" />
                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/parking_number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/parking_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/parking_number_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/entry_time"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/entry_time"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/entry_time_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/vehicle_number"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/vehicle_number"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/vehicle_number_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/alloted_space"
                            android:textColor="@color/black"
                            android:textSize="@dimen/title"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/space_name"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:gravity="center"
                            android:text="@string/alloted_space_example"
                            android:textColor="@color/black"
                            android:textSize="@dimen/card_title"
                            android:textStyle="bold" />

                    </LinearLayout>

                    <com.google.android.material.button.MaterialButton
                        android:id="@+id/vehicle_exit_ok"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_marginTop="20dp"
                        android:text="@string/vehicle_ok"
                        android:textAllCaps="false"
                        android:textColor="@color/white"
                        app:backgroundTint="@color/button_text" />

                </LinearLayout>


            </LinearLayout>

        </RelativeLayout>
    </ScrollView>


</layout>