<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#46a9e7"
    tools:context=".presentation.home.MainHomeActivity">

    <ProgressBar
        android:id="@+id/entry_exit_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:translationZ="10dp" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/parking_home_logo" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_entry_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="150dp"
        android:text="@string/entry_exit_entry_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_exit_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="150dp"
        android:layout_marginEnd="20dp"
        android:text="@string/entry_exit_exit_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_reserve_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/parking_exit_button"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/entry_exit_reserve_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_un_reserve_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/parking_exit_button"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/entry_exit_un_reserve_button"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_vacancy_detail_button"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/parking_reserve_button"
        android:layout_centerInParent="true"
        android:layout_marginTop="20dp"
        android:text="@string/entry_exit_vacancy"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />


</RelativeLayout>