<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/price_calculation_dialog"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:paddingHorizontal="20dp">

    <ProgressBar
        android:id="@+id/price_calculation_progress_bar"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="match_parent"
        android:layout_height="5dp"
        android:layout_gravity="center"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginEnd="30dp"
        android:orientation="vertical">

        <TextView
            android:id="@+id/floor_detail_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/price_calculation"
            android:textColor="@color/black"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/coupon_code_text_input_layout"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="5dp"
            android:hint="@string/coupon_code"
            android:textColorHint="@android:color/darker_gray"
            android:theme="@style/TextInputLayoutStyle"
            app:boxStrokeColor="@color/button_text"
            app:endIconTint="@color/button_text"
            app:hintTextColor="@color/button_text">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/coupon_code_text_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/apply_coupon_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/check_coupon"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_text" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/calculate_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/calculate"
                android:textAllCaps="false"
                android:textColor="@color/white"
                app:backgroundTint="@color/button_text" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/price_details_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/transaction_total_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/transaction_discounted_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:gravity="center"
                        android:text="@string/transaction_net_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_marginStart="10dp"
                    android:gravity="center_vertical"
                    android:orientation="vertical">


                    <TextView
                        android:id="@+id/total_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/default_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />

                    <TextView
                        android:id="@+id/discounted_price_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/default_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />

                    <TextView
                        android:id="@+id/net_amount_label"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="2"
                        android:gravity="center"
                        android:text="@string/default_amount"
                        android:textColor="@color/black"
                        android:textSize="@dimen/title" />
                </LinearLayout>
            </LinearLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/pay_dialog_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginBottom="10dp"
                android:text="@string/pay"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:visibility="invisible"
                app:backgroundTint="@color/button_text" />
        </LinearLayout>


    </LinearLayout>


</LinearLayout>
