<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".presentation.home.MainHomeActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_centerInParent="true"
        android:scaleType="centerCrop"
        android:src="@drawable/parking_home_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_marginStart="20dp"
        android:layout_marginTop="20dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="40dp"
            android:layout_height="50dp"
            android:src="@drawable/ic_baseline_settings_24" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="50dp"
            android:layout_marginStart="20dp"
            android:gravity="center"
            android:text="@string/parking_settings"
            android:textSize="@dimen/dialog_title"
            android:textStyle="bold" />

    </LinearLayout>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/floor_settings_card"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="200dp"
        android:text="@string/settings_floor_list"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/parking_charges_settings_card"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_alignParentEnd="true"
        android:layout_gravity="center"
        android:layout_marginTop="200dp"
        android:layout_marginEnd="20dp"
        android:text="@string/settings_parking_charges"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/discount_coupon_settings_card"
        android:layout_width="150dp"
        android:layout_height="80dp"
        android:layout_below="@+id/parking_charges_settings_card"
        android:layout_centerInParent="true"
        android:layout_gravity="center"
        android:layout_marginStart="20dp"
        android:layout_marginTop="30dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="50dp"
        android:text="@string/settings_discount_coupon"
        android:textAllCaps="false"
        android:textColor="@color/white"
        app:backgroundTint="@color/button_text" />


</RelativeLayout>